# max116xx-10bit-rs

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
automation/: Dockerfile  Jenkinsfile
src/: lib.rs
